--- a/intro.Rnw
+++ b/intro.Rnw
@@ -5529,9 +5529,132 @@ scatter(acm, col=brewer.pal(4,"Set1"))
 \label{fig_acm_scatter}
 \end{figure}
 
+\section{ACM avec \textsf{FactoMineR}}
 
+Comme avec \textsf{ade4}, il est nécessaire de préparer les données au préalable
+(voir section précédente). L'ACM se calcule avec la fonction \rfunc{MCA}, 
+\texttt{ncp} permettant de choisir le nombre d'axes à retenir~:
 
+<<>>=
+acm <- MCA(dt, ncp=5, graph=FALSE)
+acm
+acm$eig
+sum(acm$eig$eigenvalue)
+@
 
+En premier lieu, il apparait que l'inertie totale obtenue avec \rfunc{MCA} est 
+différente de celle observée avec \rfunc{dudi.acm}. Cela est dû à un traitement
+différents des valeurs manquantes. Alors que \rfunc{dudi.acm} exclu les valeurs
+manquantes, \rfunc{MCA} les considèrent, par défaut, comme une modalité 
+additionnelle. Pour calculer l'ACM uniquement sur les individus n'ayant pas de
+valeur manquante, on aura recours à \rfunc{complete.cases}~:
+
+<<>>=
+acm <- MCA(dt[complete.cases(dt),], ncp=5, graph=FALSE)
+acm$eig
+sum(acm$eig$eigenvalue)
+@
+
+Les possibilités graphiques de \rfunc{FactoMineR} sont plus limitées que celles
+de \rfunc{ade}.
+Un recours à la fonction \rfunc{plot} affichera par défaut les individus, les 
+modalités et les variables. La commande \texttt{?plot.MCA} affichera toutes les
+options graphiques. L'argument \texttt{choix} permet de spécifier ce que l'on
+souhaite afficher (<<~ind~>> pour les individus et les catégories, <<~var~>>
+pour les variables). L'argument \texttt{invisible} quant à lui permet de spécifier
+ce que l'on souhaite masquer. Les axes à afficher se précisent avec \texttt{axes}.
+Voir figures \ref{fig_acm_plot_mca1}, \ref{fig_acm_plot_mca2}, \ref{fig_acm_plot_mca3},
+\ref{fig_acm_plot_mca4} et \ref{fig_acm_plot_mca5}.
+
+\begin{figure}
+<<>>=
+plot(acm)
+@ 
+\caption{Plan factoriel (deux premiers axes)}
+\label{fig_acm_plot_mca1}
+\end{figure}
+
+\begin{figure}
+<<>>=
+plot(acm, axes=c(3,4))
+@ 
+\caption{Plan factoriel (axes 3 et 4)}
+\label{fig_acm_plot_mca2}
+\end{figure}
+
+\begin{figure}
+<<>>=
+plot(acm, choix="ind")
+@ 
+\caption{Plan factoriel (seulement les individus et les catégories)}
+\label{fig_acm_plot_mca3}
+\end{figure}
+
+\begin{figure}
+<<>>=
+plot(acm, choix="ind", invisible="ind")
+@ 
+\caption{Plan factoriel (seulement les catégories)}
+\label{fig_acm_plot_mca4}
+\end{figure}
+
+\begin{figure}
+<<>>=
+plot(acm, choix="var")
+@ 
+\caption{Plan factoriel (seulement les variables)}
+\label{fig_acm_plot_mca5}
+\end{figure}
+
+La fonction \rfunc{plotellipses} trace des ellipses de confiance atour des 
+modalités de variables qualitatives. L'objectif est de voir si les modalités
+d'une variable qualitative sont significativement différentes les unes des autres.
+Par défaut (\texttt{means=TRUE}), les ellipses de confiance sont calculées 
+pour les coordonnées moyennes de chaque catégorie (voir figure 
+\ref{fig_acm_plotellipses} \vpageref{fig_acm_plotellipses}). L'option 
+\texttt{means=FALSE} calculera les ellipses de confiance pour l'ensemble
+des coordonnées des observations relevant de chaque catégorie (voir figure
+\ref{fig_acm_plotellipses2} \vpageref{fig_acm_plotellipses2}).
+
+\begin{figure}
+<<warning=FALSE>>=
+plotellipses(acm)
+@ 
+\caption{Ellipses de confiance (\texttt{means=TRUE}) dans le plan factoriel}
+\label{fig_acm_plotellipses}
+\end{figure}
+
+\begin{figure}
+<<warning=FALSE>>=
+plotellipses(acm, means=FALSE)
+@ 
+\caption{Ellipses de confiance (\texttt{means=FALSE}) dans le plan factoriel}
+\label{fig_acm_plotellipses2}
+\end{figure}
+
+\clearpage
+
+La fonction \rfunc{dimdesc} aide à décrire et interpréter les dimensions de l'ACM.
+Cette fonction est très utile quand le nombre de variables est élevé.
+Elle permet de voir à quelles variables les axes sont le plus liés : 
+quelles variables et quelles modalités décrivent le mieux chaque axe.
+
+<<~\textit{Pour les variables qualitatives, un modèle d'analyse de variance à un facteur 
+est réalisé pour chaque dimension~; les variables à expliquer sont les coordonnées des 
+individus et la variable explicative est une des variables qualitatives. Un test F permet
+de voir si la variable a un effet significatif sur la dimension et des tests T sont réalisés
+modalité par modalité (avec le contraste somme des alpha\textunderscore{}i=0). 
+Cela montre si les coordonnées 
+des individus de la sous-population définie par une modalité sont significativement différentes
+de celles de l'ensemble de la population (i.e. différentes de 0). Les variables et modalités 
+sont triées par probabilité critique et seules celles qui sont significatives sont gardées dans 
+le résultat.}~>>
+
+Source~: \url{http://factominer.free.fr/factosbest/description-des-dimensions.html}
+
+<<>>=
+dimdesc(acm, axes=1:2)
+@
 
 
 
