--- a/intro.Rnw
+++ b/intro.Rnw
@@ -5473,7 +5473,7 @@ les différentes valeurs possibles, voir la figure \ref{fig_pch} \vpageref{fig_p
   Lorsque l’on réalise une ACM, il n’est pas rare que plusieurs observations 
   soient identiques, c’est-à-dire correspondent à la même combinaison de modalités.
   Dès lors, ces observations seront projetées sur le même point dans le plan factoriel.
-  Une représentation classique des observations avec \rfubnc{s.label} ne permettra 
+  Une représentation classique des observations avec \rfunc{s.label} ne permettra 
   pas de rendre des effectifs de chaque point. Vous trouverez à cette adresse 
   (\url{http://joseph.larmarange.net/?article147}) une petite fonction \rfunc{s.freq}
   représentant chaque point par un carré proportionnel au nombre d’individus.
