--- a/intro.Rnw
+++ b/intro.Rnw
@@ -5730,6 +5730,374 @@ dimdesc(acm2, axes=1:2)
 @
 
 
+\chapter{Classification ascendante hiérarchique (CAH)}
+
+Il existe de nombreuses techniques statistiques visant à partinionner une population
+en différentes classes ou sous-groupes. La \textit{classification ascendante 
+hiérarchique} (CAH) est l'une d'entre elles. On cherche à ce que les individus
+regroupés au sein d'une même classe (homogénéité intra-classe) soient le plus semblables 
+possibles tandis que les classes soient le plus dissemblables (hétérogénéité inter-classe).
+
+Le principe de la CAH est de rassembler des individus selon un critère de 
+ressemblance défini au préalable qui s'exprimera sous la forme d'une \textit{matrice
+de distances}, exprimant la distanc existant entre chaque individu pris deux à deux. 
+Deux observations identiques auront une distance nulle. Plus les deux observations seront
+dissemblables, plus la distance sera importante. La CAH va ensuite rassembler les 
+individus de manière itérative afin de produire un \textit{dendrogramme} ou \textit{arbre de
+classification}. La classification est \textit{ascendante} car elle part des observations 
+individuelles~; elle est \textit{hiérarchique} car elle produit des classes ou 
+groupes de plus en plus vastes, incluant des sous-groupes en leur sein. En découpant
+cet arbre à une certaine hauteur choisie, on produira la partition désirée.
+
+\begin{remarque}
+  On trouvera également de nombreux supports de cours en français sur la CAH sur
+  le site de François Gilles Carpentier~: \url{http://geai.univ-brest.fr/~carpenti/}.
+\end{remarque}
+
+\section{Calculer une matrice des distances}
+
+La notion de \textit{ressemblance} entre observations est évaluée par une distance
+entre individus. Plusieurs type de ditances existent selon les données utilisées.
+
+Il existe de nombreuses distances mathématiques pour les variables quantitatives
+(euclidiennes, Manhattan...) que nous n'aborderons pas ici\footnote{Pour une 
+présentation de ces différentes distances, on pourra se référer à
+\url{http://old.biodiversite.wallonie.be/outils/methodo/similarite_distance.htm}
+ou encore à ce support de cours par D. Chessel, J. Thioulouse et A.B. Dufour disponible
+à \url{http://pbil.univ-lyon1.fr/R/pdf/stage7.pdf}.}.
+La plupart peuvent être calculées avec la fonction \rfunc{dist}.
+
+Usuellement, pour un ensemble de variables qualitatives, on aura recours à la
+distance du $\Phi^2$ qui est celle utilisée pour l'analyse des correspondances 
+multiples (voir chapitre \ref{chapitre_acm} \vpageref{chapitre_acm}). Avec
+l'extension \textsf{ade4}, la distance du $\Phi^2$ s'obtient avec la fonction
+\rfunc{dist.dudi}\footnote{Cette même fonction peut aussi être utilisée pour 
+calculer une distance après une analyse en composantes principales ou une 
+analyse mixte de Hill et Smith.}. Le cas particulier de la CAH avec l'extension
+\textsf{FactoMineR} sera abordée dans une section spécifique (section 
+\ref{cah_factominer} \vpageref{cah_factominer}). Nous évoquerons également la 
+distance de Gower qui peut s'appliquer à un ensemble de variables à la fois 
+qualitatives et quantitatives et qui se calcule avec la fonction \rfunc{daisy} de 
+l'extension \textsf{cluster}. Enfin, dans le chapitre \ref{chapitre_sequences}
+sur l'analyse de séquences \vpageref{chapitre_sequences}, nous verrons également
+la fonction \rfunc{seqdist} (extension \textsf{TraMineR}) permettant de calculer
+une distance entre séquences.
+
+\subsection{Distance de Gower}
+
+En 1971, Gower a proposé un indice de similarité qui porte son nom. L’objectif de 
+cet indice consiste à mesurer dans quelle mesure deux individus sont semblables. 
+L’indice de Gower varie entre 0 et 1. Si l’indice vaut 1, les deux individus sont 
+identiques. À l’opposé, s’il vaut 0, les deux individus considérés n’ont pas de 
+point commun. Si l’on note $S_{g}$ l’indice de similarité de Gower, la distance 
+de Gower $D_{g}$ s’obtient simplement de la manière suivante : $D_{g} = 1 – S_{g}$.
+Ainsi, la distance sera nulle entre deux individus identiques et elle sera égale 
+à 1 entre deux individus totalement différents. Cette distance s’obtient sous \R
+avec la fonction \rfunc{daisy} du package \textsf{cluster}.
+
+L’indice de similarité de Gower entre deux individus $x_{1}$ et $x_{2}$ se calcule
+de la manière suivante~:
+
+\begin{equation}
+S_{g}(x_{1},x_{2})=\frac{1}{p}\sum_{j=1}^{p}s_{12j}
+\end{equation}
+ 
+\noindent
+$p$ représente le nombre total de caractères (ou de variables) descriptifs utilisés
+pour comparer les deux individus. $s_{12j}$ représente la similarité partielle 
+entre les individus 1 et 2 concernant le descripteur $j$. Cette similarité partielle
+se calcule différemment s’il s’agit d’une variable qualitative ou quantitative~:
+\begin{itemize}
+\item \textbf{variable qualitative~:} $s_{12j}$ vaut 1 si la variable $j$ prend 
+la même valeur pour les individus 1 et 2, et vaut 0 sinon. Par exemple, si 1 et 2
+sont tous les deux <<~grand~>>, alors $s_{12j}$ vaudra 1. Si 1 est <<~grand~>> 
+et 2 <<~petit~>>, $s_{12j}$ vaudra 0.
+\item \textbf{variable quantitative~:} la différence absolue entre les valeurs des deux 
+variables est tout d’abord calculée, soit $\left | y_{1j} - y_{2j} \right |$. 
+Puis l’écart maximum observé sur l’ensemble du fichier est déterminé et noté $R_{j}$. 
+Dès lors, la similarité partielle vaut $S_{12j}=\left | y_{1j} - y_{2j} \right |/R_{j}$.
+\end{itemize}
+
+\noindent
+Dans le cas où l’on n’a que des variables qualitatives, la valeur de l’indice de 
+Gower correspond à la proportion de caractères en commun. Supposons des 
+individus 1 et 2 décris ainsi~:
+\begin{enumerate}
+\item homme / grand / blond / étudiant / urbain
+\item femme / grande / brune / étudiante / rurale
+\end{enumerate}
+
+\noindent
+Sur les 5 variables utilisées pour les décrire, 1 et 2 ont deux caractéristiques 
+communes~: ils sont grand(e)s et étudiant(e)s. Dès lors, l’indice de similarité 
+de Gower entre 1 et 2 vaut $2/5=0,4$ (soit une distance de $1-0,4=0,6$).
+
+\noindent
+Plusieurs approches peuvent être retenues pour traiter les valeurs manquantes~:
+\begin{itemize}
+\item supprimer tout individu n’étant pas renseigné pour toutes les variables de l’analyse~;
+\item considérer les valeurs manquantes comme une modalité en tant que telle~;
+\item garder les valeurs manquantes en tant que valeurs manquantes.
+\end{itemize}
+
+\noindent
+Le choix retenu modifiera les distances de Gower calculées. Supposons que l’on ait~:
+\begin{enumerate}
+\item homme / grand / blond / étudiant / urbain
+\item femme / grande / brune / étudiante / \textit{manquant}
+\end{enumerate}
+
+\noindent
+Si l’on supprime individus ayant des valeurs manquantes, 2 est retirée du fichier 
+d’observations et aucune distance n’est calculée. 
+Si l’on traite les valeurs manquantes comme une modalité particulière, 1 et 2 
+partagent alors 2 caractères sur les 5 analysés, la distance de Gower entre eux 
+est alors de $1-2/5=1-0,4=0,6$.
+Si on garde les valeurs manquantes, l’indice de Gower est dès lors calculé sur 
+les seuls descripteurs renseignés à la fois pour 1 et 2. La distance de Gower 
+sera calculée dans le cas présent uniquement sur les 4 caractères renseignés et 
+vaudra $1-2/4=0,5$.
+
+\subsection{Distance du $\Phi^2$}
+
+Il s’agit de la distance utilisée dans les analyses de correspondance multiples (ACM).
+C'est une variante de la distance du $\chi^2$.
+Nous considérons ici que nous avons $Q$ questions (soit $Q$ variables initiales 
+de type facteur). À chaque individu est associé un \textit{patron} c’est-à-dire 
+une certaine combinaison de réponses aux $Q$ questions. La distance entre deux 
+individus  correspond à la distance entre leurs deux patrons. Si les deux 
+individus présentent le même patron, leur distance sera nulle. La distance du 
+$\Phi^2$ peut s’exprimer ainsi~:
+
+\begin{equation}
+d_{\Phi^2}^2(L_i,L_j)=\frac{1}{Q}\sum_{k}\frac{(\delta_{ik}-\delta_{jk})^2}{f_k}
+\end{equation}
+
+\noindent
+où $L_i$ et $L_j$ sont deux patrons, $Q$ le nombre total de questions. 
+$\delta_{ik}$ vaut 1 si la modalité $k$ est présente dans le patron $L_i$, 0 sinon. 
+$f_k$ est la fréquence de la modalité $k$ dans l’ensemble de la population.
+
+\noindent
+Exprimé plus simplement, on fait la somme de l’inverse des modalités non communes
+aux deux patrons, puis on divise par le nombre total de question. Si nous reprenons
+notre exemple précédent~:
+\begin{enumerate}
+\item homme / grand / blond / étudiant / urbain
+\item femme / grande / brune / étudiante / rurale
+\end{enumerate}
+
+\noindent
+Pour calculer la distance entre 1 et 2, il nous faut connaître la proportion des 
+différentes modalités dans l’ensemble de la population étudiée. En l’occurrence~:
+\begin{itemize}
+\item hommes : 52~\% / femmes : 48~\%
+\item grand : 30~\% / moyen : 45~\% / petit : 25~\%
+\item blond : 15~\% / châtain : 45~\% / brun : 30~\% / blancs : 10~\%
+\item étudiant : 20~\% / salariés : 65~\% / retraités : 15~\%
+\item urbain : 80~\% / rural : 20~\%
+\end{itemize}
+
+\noindent
+Les modalités non communes entre les profils de 1 et 2 sont~: homme, femme, 
+blond, brun, urbain et rural. La distance du $\chi^2$ entre 1 et 2 est donc 
+la suivante~:
+
+\begin{equation}
+d_{\Phi^2}^2(L_1,L_2)=\frac{1}{5}(\frac{1}{0,52}+\frac{1}{0,48}+\frac{1}{0,15}+\frac{1}{0,30}+\frac{1}{0,80}+\frac{1}{0,20})=4,05
+\end{equation}
+ 
+Cette distance, bien que moins intuitive que la distance de Gower évoquée 
+précédemment, est la plus employée pour l'analyse d'enquêtes en sciences sociales. 
+Il faut retenir que la distance entre deux profils est dépendante de la 
+distribution globale de chaque modalité dans la population étudiée. Ainsi, si 
+l’on recalcule les distances entre individus à partir d’un sous-échantillon, 
+le résultat obtenu sera différent. De manière générale, les individus présentant 
+des caractéristiques rares dans la population vont se retrouver éloignés des 
+individus présentant des caractéristiques fortement représentées.
+
+\subsection{Example}
+
+Nous allons reprendre l'ACM calculée avec \texttt{dudi.acm} (\textsf{ade4}) au
+chapitre \ref{chapitre_acm}. La matrice des distances s'obtient dès lors avec
+la fonction \rfunc{dist.dudi}~:
+
+<<>>=
+md <- dist.dudi(acm)
+@
+
+
+\section{Calcul du dendrogramme}
+
+Il faut ensuite choisir une méthode d’agrégation pour construire le dendrogramme.
+De nombreuses solutions existent (saut minimum, distance maximum, moyenne, Ward...). 
+Chacune d’elle produira un dendrogramme différent. Nous ne détaillerons pas ici
+ces différentes techniques\footnote{On pourra consulter le cours de FG Carpentier
+déjà cité ou bien des ouvrages d'analyse statistique.}. Cependant, à l'usage, on
+privilégiera le plus souvent la \textit{méthode de Ward}. Cette méthode se 
+distingue de toutes les autres en ce sens qu'elle utilise une analyse de la 
+variance approchée afin d'évaluer les distances entre groupes. La méthode 
+de Ward se justifie bien lorsque lorsque l'on utilise le carré de la distance. 
+Choisir de regrouper les deux individus les plus proches revient alors à choisir 
+la paire de points dont l'agrégation entraîne la diminution minimale de l'inertie 
+du nuage.  En résumé, cette méthode cherche à minimiser l'inertie intra-classe 
+et à maximiser l'inertie inter-classe afin d'obtenir des classes les plus 
+homogènes possibles.
+
+En raison de la variété des distances possibles et de la variété des techniques 
+d’agrégation, on pourra être amené à réaliser plusieurs dendrogrammes différents 
+sur un même jeu de données jusqu’à obtenir une classification qui fait <<~sens~>>.
+
+La fonction de base pour le calcul d'un dendrogramme est \rfunc{hclust} en précisant
+le critère d'aggrégation avec \texttt{method}. Dans notre cas, nous allons opter
+pour la méthode de Ward appliquée au carré des distances (ce qu'on indique avec
+\texttt{md\^{}2})~:
+
+<<>>=
+arbre <- hclust(md^2, method="ward")
+@
+
+\begin{astuce}
+  Le temps de calcul d'un dendrogramme peut être particulièrement important sur
+  un gros fichier de données. L'extension \textsf{flashClust} permet de réduire
+  significativement le temps de calcul. Il suffit d'installer puis d'appeler cette
+  extension. La fonction \rfunc{hclust} sera automatiquement remplacée par cette
+  version optimisée.
+  
+  <<eval=FALSE>>=
+  library(flashClust)
+  arbre <- hclust(md^2, method="ward")
+  @
+\end{astuce}
+
+Le dendrogramme obtenu peut être affiché simplement avec \rfunc{plot}. Lorsque
+le nombre d'individus est important, il peut être utile de ne pas afficher les
+étiquettes des individus avec \texttt{labels=FALSE} (voir figure 
+\ref{fig_plot_hclust} \vpageref{fig_plot_hclust}).
+
+\begin{figure}
+<<>>=
+plot(arbre, labels=FALSE, main="Dendrogramme")
+@ 
+\caption{Dendrogramme obtenu avec \texttt{hclust}}
+\label{fig_plot_hclust}
+\end{figure}
+
+La fonction \rfunc{agnes} de l'extension \textsf{cluster} peut également
+être utilisée pour calculer le dendrogramme. Cependant, à l'usage, elle
+semble être un peu plus lente que \rfunc{hclust}.
+
+<<eval=FALSE>>=
+arbre2 <- agnes(md^2, method="ward")
+@
+
+Le résultat obtenu n'est pas au même format que celui de \rfunc{hclust}. Il est
+possible de transformer un objet \texttt{agnes} au format \texttt{hclust} avec
+\rfunc{as.hclust}.
+
+\begin{astuce}
+  De nombreuses possibilités graphiques sont possibles avec les dendrogrammes.
+  Des exemples documentés sont disponibles à cette adresse~: 
+  \url{http://rpubs.com/gaston/dendrograms}.
+\end{astuce}
+
+
+\section{Découper le dendrogramme}
+
+Pour obtenir une partition de la population, il suffit de découper le
+dendrogramme obtenu à une certaine hauteur. En premier lieu, une analyse
+de la forme du dendrogramme pourra nous donner une indication sur le nombre
+de classes à retenir. Dans notre exemple, deux branches bien distinctes 
+apparaissent sur l'arbre. 
+
+Pour nous aider, nous pouvons représenter les sauts d'inertie du dendrogramme
+selon le nombre de classes retenues (voir figure \ref{fig_sauts_inertie}
+\vpageref{fig_sauts_inertie}). On voit trois sauts assez nets, à 2, 5 et
+8 classes, représentés respectivement en vert, en rouge et en bleu.
+
+\begin{figure}
+<<>>=
+inertie <- sort(arbre$height, decreasing=TRUE)
+plot(inertie[1:20], type="s", xlab="Nombre de classes", ylab="Inertie")
+points(c(2,5,8),inertie[c(2,5,8)],col=c("green3","red3","blue3"),cex=2,lwd=3)
+@ 
+\caption{Sauts d'inertie du dendrogramme}
+\label{fig_sauts_inertie}
+\end{figure}
+
+La fonction \rfunc{rect.hclust} permet de visualiser les différentes partitions
+directement sur le dendrogramme (voir figure \ref{fig_rect_hclust} 
+\vpageref{fig_rect_hclust}).
+
+\begin{figure}
+<<>>=
+plot(arbre, labels=FALSE, main="Partition en 2, 5 ou 8 classes", xlab="", ylab="", sub="", axes=FALSE,hang=-1)
+rect.hclust(arbre, 2, border="green3")
+rect.hclust(arbre, 5, border="red3")
+rect.hclust(arbre, 8, border="blue3")
+@
+\caption{Différentes partitions du dendrogramme}
+\label{fig_rect_hclust}
+\end{figure}
+
+
+
+<<>>=
+best.cutree <- function(hc, min=3, max=20, loss=FALSE, graph=FALSE, ...){
+  if (class(hc)!="hclust") hc <- as.hclust(hc)
+  max <- min(max, length(hc$height))
+  inert.gain <- rev(hc$height)
+  intra <- rev(cumsum(rev(inert.gain)))
+  relative.loss = intra[min:(max)]/intra[(min - 1):(max - 1)]
+  best = which.min(relative.loss)
+  names(relative.loss) <- min:max
+  if (graph) {
+  	temp <- relative.loss
+  	temp[best] <- NA
+  	best2 <- which.min(temp)
+  	pch <- rep(1, max-min+1)
+  	pch[best] <- 16
+  	pch[best2] <- 21
+  	plot(min:max, relative.loss, pch=pch, bg="grey75", ...)
+  } else {
+  	if (loss)
+  	  relative.loss
+    else
+      best + min - 1
+  }
+}
+@
+
+
+\begin{figure}
+<<>>=
+best.cutree(arbre, min=2, graph=TRUE)
+@
+\caption{Perte relative d'inertie selon le nombre de classes}
+\label{fig_bestcutree}
+\end{figure}
+
+
+
+Découper avec cutree ou rect.hclust
+Quelles différences ?
+
+Un joli dendrogramme avec les branches colorées grace à A2Rplot.
+
+
+
+\section{CAH avec l'extension \textsf{FactoMineR}}
+\label{cah_factominer}
+
+
+Fonction HCPC
+
+
+\chapter{Analyse de séquences}
+\label{chapitre_sequences}
+
+
+
 
 \chapter{Exporter les résultats}
 
