odds.ratio est maintenant fournie par questionr

--- a/intro.Rnw
+++ b/intro.Rnw
@@ -4607,48 +4607,8 @@ Pour savoir si un odds ratio diffère significativement de 1 (ce qui est identiq
 au fait que le coefficient soit différent de 0), on pourra se référer à la colonne
 \texttt{Pr(>|z|)} obtenue avec \rfunc{summary}.
 
-Il y a également une petite fonction bien pratique appelée \rfunc{odds.ratio} et 
-disponible à cette adresse~: \url{http://joseph.larmarange.net/?Calculer-les-Odds-Ratio-d-une}.
-En premier lieu, on va copier le code de cette fonction et l'exécuter dans \R~:
-
-<<>>=
-odds.ratio <- function(reg, level=0.95, digits=3) {
-	if ("glm" %in% class(reg)) {
-		if(reg$family$family == "binomial"){
-			r <- cbind(exp(coef(reg)),exp(confint(reg, level=level))
-					   ,summary(reg)$coefficients[,4])
-			r[,1:3] <- round(r[,1:3],digits=digits)
-			colnames(r)[1] <- "OR"
-			colnames(r)[4] <- "p"
-			printCoefmat(r,signif.stars=TRUE,has.Pvalue=TRUE)
-		} else {
-			stop('reg should be a glm with family=binomial or the result of multinom.')
-		}
-	} else if ("multinom" %in% class(reg)) {
-		coef <- summary(reg)$coefficients
-		ci <- confint(reg,level=level)
-		# From http://www.ats.ucla.edu/stat/r/dae/mlogit.htm
-		z <- summary(reg)$coefficients/summary(reg)$standard.errors
-		p <- p <- (1 - pnorm(abs(z), 0, 1)) * 2
-		d <- dim(ci)
-		r <- array(NA,c(d[1]*d[3],d[2]+2))
-		dimnames(r)[[1]]<-rep("",d[1]*d[3])
-		for (i in 1:d[3]) {
-			fl <- (i-1)*d[1] + 1 #first line
-			ll <- i*d[1] #last line
-			r[fl:ll,] <- cbind(coef[i,],ci[,,i],p[i,])
-			rownames(r)[fl:ll] <- paste0(rownames(coef)[i],"/",colnames(coef))
-		}
-		r[,1:3] <- round(r[,1:3],digits=digits)
-		colnames(r) <- c("OR",dimnames(ci)[[2]],"p")
-		printCoefmat(r,signif.stars=TRUE,has.Pvalue=TRUE)
-	}
-	else 
-		stop('reg should be a glm with family=binomial or the result of multinom.')
-}
-@
-
-Ensuite, il n'y a plus qu'à l'éxécuter~:
+Il y a également une petite fonction bien pratique  
+fournie dans l'extension \questionr \marqr et appelée \rfunc{odds.ratio}~:
 
 <<>>=
 odds.ratio(reg)
